fix: grouping-selectors problem set

--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="click-me-button positive-click-me">Click Me!</button>
-    <button class="click-me-button negative-click-me">No, Click Me!</button>
+    <button class="positive-click-me">Click Me!</button>
+    <button class="negative-click-me">No, Click Me!</button>
   </body>
 </html>
